; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-lm70llp.c_clkLow.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-lm70llp.c_clkLow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_lm70llp = type { i32 }

@SCLK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.spi_lm70llp*)* @clkLow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clkLow(%struct.spi_lm70llp* %0) #0 {
  %2 = alloca %struct.spi_lm70llp*, align 8
  %3 = alloca i32, align 4
  store %struct.spi_lm70llp* %0, %struct.spi_lm70llp** %2, align 8
  %4 = load %struct.spi_lm70llp*, %struct.spi_lm70llp** %2, align 8
  %5 = getelementptr inbounds %struct.spi_lm70llp, %struct.spi_lm70llp* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @parport_read_data(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load %struct.spi_lm70llp*, %struct.spi_lm70llp** %2, align 8
  %9 = getelementptr inbounds %struct.spi_lm70llp, %struct.spi_lm70llp* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @SCLK, align 4
  %13 = xor i32 %12, -1
  %14 = and i32 %11, %13
  %15 = call i32 @parport_write_data(i32 %10, i32 %14)
  ret void
}

declare dso_local i32 @parport_read_data(i32) #1

declare dso_local i32 @parport_write_data(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
